[package]
name = "rust-fitbit-api-client"
version = "0.1.0"
edition = "2021"
author = "Jackie D. Whittle"
license = "Apache-2.0"
keywords = ["fitbit", "api"]
categories = ["api-bindings"]
publish = ["fitbit-api-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
